--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.89.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/validator": "^13.15.10",
     "bcryptjs": "^3.0.3",
     "next": "^15.1.0",
     "next-auth": "^4.24.13",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "resend": "^6.6.0",
+    "validator": "^13.15.26"
   },
   "devDependencies": {
     "@types/node": "^20.17.0",
