--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcryptjs": "^3.0.3",
     "next": "^15.1.0",
     "next-auth": "^4.24.13",
+    "nodemailer": "^7.0.12",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.17.0",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "autoprefixer": "^10.4.20",
